# collective

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
include/embedding/: EmbeddingLayer.hpp  PositionalEncoding.hpp  embedding-layer.hpp
include/gpt/: GPT.hpp
include/matrix/: Matrix.hpp
include/tokenization/: BPETokenizer.hpp  tokenizer.hpp
include/transformer/: TransformerBlock.hpp
src/: main.cpp
src/embedding/: EmbeddingLayer.cpp  PositionalEncoding.cpp  embedding-layer.cpp
src/gpt/: GPT.cpp
src/matrix/: Matrix.cpp
src/tokenization/: BPETokenizer.cpp  Tokenizer.cpp  tokenizer.cpp
src/transformer/: TransformerBlock.cpp
